--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/bastuijnman/jeff#readme",
   "dependencies": {
-    "@slack/bolt": "^3.12.2"
+    "@giphy/js-fetch-api": "^4.7.1",
+    "@slack/bolt": "^3.12.2",
+    "openai": "^3.1.0"
   }
 }
